# ODrive-fw-v0.5.1-for_work

./: README.md  Start.json  Tuning.json  plot.csv  plot2.csv  velocity1_plot.csv  velocity2_plot.csv
Firmware/: Makefile  Tupfile.lua  build.lua  odrive-interface.yaml  修改记录.txt
Firmware/Board/v3/: STM32F405RGTx_FLASH.ld
Firmware/Board/v3/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_uart.c
Firmware/Board/v3/Inc/: main.h  mxconstants.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Firmware/Board/v3/Inc/prev_board_ver/: main_V3_2.h  main_V3_4.h
Firmware/Board/v3/Src/: adc.c  can.c  dma.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c  usbd_conf.c
Firmware/Board/v3/Src/prev_board_ver/: adc_V3_2.c  adc_V3_4.c  gpio_V3_2.c  gpio_V3_4.c
Firmware/MotorControl/: axis.cpp  axis.hpp  board_config_v3.h  controller.cpp  controller.hpp  encoder.cpp  encoder.hpp  low_level.cpp  low_level.h  main.cpp  motor.cpp  motor.hpp  odrive_main.h  sensorless_estimator.cpp  sensorless_estimator.hpp  thermistor.cpp  thermistor.hpp  utils.cpp  utils.hpp
Firmware/Tests/: test_can.cpp  test_fast_atan2.cpp  test_interp.cpp  test_muliturns.cpp
Firmware/communication/: ascii_protocol.cpp  can_encos.cpp  can_encos.hpp  can_simple.cpp  can_simple.hpp  communication.cpp  communication.h  interface_can.cpp  interface_can.hpp  interface_uart.cpp
matlab/: ADRC.slxc  BoosterMotorEncosTest-1.1hz.csv  BoosterMotorEncosTest-1hz.csv  BoosterMotorEncosTest-3hz.csv  BoosterMotorEncosTest-4hz.csv  BoosterMotorEncosTestencos-1hz(1).csv  BoosterMotorEncosTestencos-1hz(2).csv  BoosterMotorEncosTestencos-1hz.csv  BoosterMotorEncosTestencos-241102-1hz.csv  BoosterMotorEncosTestencos-241102-2hz.csv  BoosterMotorEncosTestencos-241102-3hz.csv  BoosterMotorEncosTestencos-241102-4hz.csv  BoosterMotorEncosTestencos-241102-5hz.csv  BoosterMotorEncosTestencos-2hz(1).csv  BoosterMotorEncosTestencos-2hz(2).csv  BoosterMotorEncosTestencos-2hz.csv  BoosterMotorEncosTestencos-3hz(1).csv  BoosterMotorEncosTestencos-3hz.csv  BoosterMotorEncosTestencos-4hz.csv  BoosterMotorEncosTestencos5hz(1).csv  IQ_Fre.csv  IQ_ID.asv  IQ_ID.m  Untitled.mat  analyze_and_plot_data.m  current_B_C.csv  current_B_C_0.csv  current_B_C_1.csv  current_B_C_1_6.csv  display_data.m  first_sencond_pos.csv  iq_actual.csv  iq_setpoint.csv  iq_sweep_fre.asv  iq_sweep_fre.m  motor_gear_encoder_two_position.m  output__actual_iq.csv  output__actual_velocity.csv  output_actual_iq-16384-1.csv  output_actual_iq-16384-2.csv  (+17 more)
matlab/ADRC_ert_rtw/: ADRC.c  ADRC.h  ADRC_private.h  ADRC_types.h  CMakeLists.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.c  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
matlab/ADRC_ert_rtw/export/: ADRC.cmake  ADRCTargets-release.cmake  ADRCTargets.cmake
matlab/ADRC_ert_rtw/tmwinternal/: simulink_cache.xml  tr
matlab/slprj/ert/ADRC/tmwinternal/: BlockTraceInfo.mat  CompileInfo.xml  binfo.mat  minfo.mat  scv
matlab/slprj/ert/_sharedutils/: shared_file.dmr
tools/: odrive_demo.py  odrivetool
